force-app/main/default/objects/Job__c/fields/Application_Status__c.field-meta.xml
<CustomField>
    <fullName>Application_Status__c</fullName>
    <label>Application Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Submitted</fullName>
                <default>true</default>
                <label>Not Submitted</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Phone Screen</fullName>
            </value>
            <value>
                <fullName>1st Interview</fullName>
            </value>
            <value>
                <fullName>2nd+ Interview</fullName>
            </value>
            <value>
                <fullName>Offer Received</fullName>
            </value>
            <value>
                <fullName>Not Selected</fullName>
            </value>
            <value>
                <fullName>SUCCESSFUL!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>