force-app/main/default/objects/Job__c/fields/Employer__c.field-meta.xml
<CustomField>
    <fullName>Employer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs Promoted by this Employer</relationshipLabel>
    <relationshipName>Jobs_Promoted_by_this_Employer</relationshipName>
    <type>Lookup</type>
</CustomField>