force-app/main/default/objects/Job__c/fields/Job_Spec__c.field-meta.xml
<CustomField>
    <fullName>Job_Spec__c</fullName>
    <label>Job Spec</label>
    <length>125000</length>
    <type>Html</type>
</CustomField>