force-app/main/default/objects/Job__c/fields/Job_Spec_Link__c.field-meta.xml
<CustomField>
    <fullName>Job_Spec_Link__c</fullName>
    <label>Job Spec Link</label>
    <type>Url</type>
</CustomField>