force-app/main/default/objects/Job__c/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Jobs Promoted by this Recruiter</relationshipLabel>
    <relationshipName>Jobs_Promoted_by_this_Recruiter</relationshipName>
    <type>Lookup</type>
</CustomField>