force-app/main/default/objects/Job__c/fields/Salary_Low__c.field-meta.xml
<CustomField>
    <fullName>Salary_Low__c</fullName>
    <label>Salary (Low)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>