force-app/main/default/objects/Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Recruiter__c</columns>
    <columns>Employer__c</columns>
    <columns>Applied_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>