force-app/main/default/objects/Job__c/listViews/Live_Applications.listView-meta.xml
<ListView>
    <fullName>Live_Applications</fullName>
    <columns>NAME</columns>
    <columns>Application_Status__c</columns>
    <columns>Contact__c</columns>
    <columns>Recruiter__c</columns>
    <columns>Employer__c</columns>
    <columns>Applied_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Application_Status__c</field>
        <operation>notEqual</operation>
        <value>Not Selected</value>
    </filters>
    <label>Live Applications</label>
</ListView>